<resources>
    <string name="app_name">Book Agoo</string>
    <string name="action_settings">Settings</string>
    <string name="free_storage">Free storage:</string>
    <string name="title_profile">Profile</string>
    <string name="title_wall">The Wall</string>
    <string name="title_book">The Book</string>
    <string name="title_special_content">Special content</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_tutorial">Tutorial</string>
    <string name="title_adout">Adout</string>
    <string name="title_add_content">Add content</string>
    <string name="private_office">Private office</string>
    <string name="navigation_drawer_open">Оpen</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="add_content_tab_itle_media">Photo/Video</string>
    <string name="add_content_tab_itle_photo">Photo</string>
    <string name="add_content_tab_itle_video">Video</string>
    <string name="add_content_tab_itle_sound">Sound</string>
    <string name="add_content_tab_itle_text">Text note</string>
    <string name="add_content_select_tag_group">Select a tag group</string>
    <string name="add_content_before_me">Before me</string>
    <string name="add_content_share_twitter">Share on Twitter</string>
    <string name="add_content_share_facebook">Share on Facebook</string>
    <string name="add_content_suggested_tags">Suggested tags:</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="action_bar_title_create_account">Create your account</string>
    <string name="profile_content_tab_itle_general">General</string>
    <string name="profile_content_tab_itle_baby">Baby</string>
    <string name="profile_content_tab_itle_family">Family</string>
    <string name="profile_buton_save">Save and continue</string>
    <string name="start_buton_login">Log in</string>
    <string name="start_buton_publish">Publish</string>
    <string name="start_buton_logaut">Logaut</string>
    <string name="start_buton_upgrade">Upgrade</string>
    <string name="start_buton_forgot">forgot?</string>
    <string name="start_buton_login_twitter">Log in with Twitter</string>
    <string name="start_buton_login_facebook">Log in with Facebook</string>
    <string name="start_buton_create_account">Create your account</string>
    <string name="start_buton_save_continue">Save and continue</string>
    <string name="start_edittext_hint_pass">Password</string>
    <string name="start_edittext_hint_name">Name</string>
    <string name="start_edittext_hint_email">E-mail</string>
    <string name="start_edittext_hint_date_of_birt">Date of birth</string>
    <string name="start_textview_title_enter_details">Enter your details:</string>
    <string name="start_textview_title_enter_babys_details">Enter your Baby\'s details:</string>
    <string name="start_textview_title_who_is_it">Who is it:</string>
    <string name="start_radiobutton_born">Born</string>
    <string name="start_radiobutton_expecting">Expecting</string>
    <string name="profile_edittext_hint_expected_birth_date">Expectеd birth date</string>
    <string name="profile_edittext_hint_middle_name">Middle name</string>
    <string name="profile_edittext_hint_last_name">Last name</string>
    <string name="profile_edittext_hint_date_of_birth">Date of birth</string>
    <string name="profile_edittext_hint_new_pass">New password</string>
    <string name="profile_edittext_hint_con_pass">Confirm password</string>
    <string name="profile_edittext_hint_pass">Password</string>
    <string name="profile_buton_twitter_account">Authorize Twitter account</string>
    <string name="profile_buton_facebook_account">Authorize Facebook account</string>
    <string name="profile_general_buy_pro">Buy Pro account $4,99</string>
    <string name="profile_general_handler">Account status and storage used:</string>
    <string name="profile_general_im">I\'m</string>
    <string name="profile_general_radiobutton_daddy">Daddy</string>
    <string name="profile_general_radiobutton_mommy">Mommy</string>
    <string name="profile_general_radiobutton_im_daddy">I\'m Daddy</string>
    <string name="profile_general_radiobutton_im_mommy">I\'m Mommy</string>
    <string name="profile_general_radiobutton_other">Other</string>
    <string name="profile_general_tablet_title">General:</string>
    <string name="profile_baby_tablet_title">Baby:</string>
    <string name="profile_family_tablet_title">Family:</string>
    <string name="profile_buton_buy_pro_account">Buy Pro account $4,9</string>
    <string name="profile_baby_photo_baby">Tap to add Baby photo</string>
    <string name="profile_baby_photo_mommy">Tap to add Mommy photo</string>
    <string name="profile_baby_photo_daddy">Tap to add Daddy photo</string>
    <string name="book_text">Your Book is not published yet!\n\nPlease log in to your BookAgoo account via desk/laptop to edit and securely publish your Book online.\n\nJust started your Free account? Please add your first content to begin your BookAgoo journey!</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="invalid_parameters">Invalid parameters</string>
    <string name="email_in_use">E-mail already in use</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="unknown_error">Unknown error</string>
    <string name="text_start_checkbox">By clicking Save and continue, you agree to BookAgoo Terms of Service end Privacy
        Policy, including Use of Cookies.
    </string>
    <string name="mess_registration">Registration</string>
    <string name="mess_log_in">Log in</string>
    <string name="mess_post_wall">Post on wall</string>
    <string name="mess_input_error_pass">Input error password</string>
    <string name="abs_title_create_account_activity">Create your account</string>
    <string name="abs_title_add_content_activity">Add content</string>
    <string name="add_content_your_notes">Your notes</string>
    <string name="tutorial_handler_overview">Overview</string>
    <string name="tutorial_txt_overview">BookAgoo App will help you to create your baby’s first year Digital Book in the
        easiest and the most comfortable way.
    </string>
    <string name="tutorial_handler_how_it_works">How it works</string>
    <string name="tutorial_txt_how_it_works">Sign up for Free account and fill the profile
        \n\nStart capturing photos, videos, sounds and notes on the go!
        \n\nMark each piece of content with appropriate tag from available list of tags. This will help to keep your
        content properly organized in the Book from the very beginning
        \n\nSend it all to the Wall, home of all captured things
        \n\nFollow our notifications to track all your moments
        \n\nLogin to your BookAgoo.com via desk/laptop to try, preview or edit your Book template. Publish your Book
        securely online or store it locally.
        \n\nAccess your published Book directly from the App or from any other device!
    </string>
    <string name="tutorial_handler_log_in">Log in</string>
    <string name="tutorial_txt1_log_in">Log in to your BookAgoo account with your email and password.
        \nYou can also use your Facebook or Twitter credentials for quick login.
    </string>
    <string name="tutorial_txt2_log_in">Forgot your password? Tap the “Forgot?” button and we’ll reset your password in
        a few seconds!
    </string>
    <string name="tutorial_handler_create_your_account">Create your account</string>
    <string name="tutorial_txt_create_your_account">Enter your email and password, your baby’s details, even if it’s not
        born yet and tap “Save and continue”. Now your Free BookAgoo account is created. You can edit your profile
        details anytime accessing it from the menu at the top left corner.
        \nYour account data is kept securely on our server and never shared with any application, network or person.
    </string>
    <string name="tutorial_handler_profile">Profile</string>
    <string name="tutorial_text_profile">Your profile allows you to view and edit your account status, login details,
        password, connected social networks, your baby and other family members’ info.
    </string>
    <string name="tutorial_handler_the_wall">The Wall</string>
    <string name="tutorial_txt1_the_wall">You may already have collected some precious moments on your device: images,
        videos or even sounds. Post’em on the Wall – the base of your baby’s Digital Book. Or start creating your
        moments and send them to the Wall on the go.
        \nTap the Wall to start filling it with your content.
        \nThe Wall is a home of all your posts shown as you publish them in calendar order.
    </string>
    <string name="tutorial_txt2_the_wall">After having published your first post you can already start creating your
        Digital Book.
        \nPlease login to your BookAgoo account via desk/laptop for further steps.
    </string>
    <string name="tutorial_handler_add_content">Add content</string>
    <string name="tutorial_txt1_add_content">Line at the top indicates available storage space on your Free account. You
        can always upgrade to Pro 2 GB account from your free account.
    </string>
    <string name="tutorial_txt2_add_content">Choose type of content you wish to post on your Wall: photo/video, sound or
        text note.
    </string>
    <string name="tutorial_txt3_add_content">Select media file on your device or enter a text note. You can share this
        post via Facebook or Twitter. Please mark each piece of content with appropriate tag from available tags below.
        This will help to keep your content properly organized in the Book from the very beginning. Tap Add to publish
        your first post.
    </string>
    <string name="tutorial_handler_special_content">Special content</string>
    <string name="tutorial_txt_special_content">Special content does not appear directly on the Wall. It is a part of
        your Digital Book that keeps record of your baby’s growth and its teeth. Don’t forget to update records!
    </string>
    <string name="tutorial_handler_notifications">Notifications</string>
    <string name="tutorial_txt_notifications">Notifications help you to keep track of things that happen with and around
        your baby and family even before the baby is born. You will not forget or miss any exciting moment and an
        important milestone of your new life.
    </string>
    <string name="tutorial_handler_the_book">The Book</string>
    <string name="tutorial_handler_welcome_to_bookagoo">Welcome\nto BookAgoo!</string>
    <string name="tutorial_txt1_welcome_to_bookagoo">The first year digital book that grows with your child.</string>
    <string name="tutorial_txt2_welcome_to_bookagoo">Swipe to find out how it works</string>
    <string name="tutorial_txt1_end">BookAgoo App will help you to create your baby’s first year Digital Book in the
        easiest and the most comfortable way.
    </string>
    <string name="tutorial_txt2_end">Version: 1.0</string>
    <string name="tutorial_txt3_end">For more information visit our website:</string>
    <string name="tutorial_txt4_end">www.bookagoo.com</string>
    <string name="tutorial_txt5_end">Copyright © 2013-2014 BookAgoo LLC. All rights reserved.</string>
    <string name="tutorial_txt6_end">Made by ITECH.mobile</string>
    <string name="tutorial_txt7_end">itech-mobile.ru</string>
    <string name="start_buton_rate_us">Rate Us</string>
    <string name="start_buton_send_feedback">Send Feedback</string>
</resources>