<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
    <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:src="@drawable/login_bg"
            android:layout_width="152dp"
            android:layout_height="94dp"/>
    <TextView
            android:text="@string/tutorial_txt1_end"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#008e77"
            android:layout_marginBottom="24dp"/>
    <TextView
            android:text="@string/tutorial_txt2_end"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:textColor="#333"
            android:layout_marginBottom="8dp"/>
    <TextView
            android:text="@string/tutorial_txt3_end"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:textColor="#333"/>
    <TextView
            android:text="@string/tutorial_txt4_end"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:textColor="#ef4035"
            android:layout_marginBottom="8dp"/>
    <TextView
            android:text="@string/tutorial_txt5_end"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:textColor="#333"
            android:layout_marginBottom="8dp"/>


    <FrameLayout
            android:id="@+id/fragmentAdout_ratUs"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bt"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:minHeight="35dp">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
            <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/arrow_zsolt"
                    android:layout_width="16sp"
                    android:layout_height="16sp"
                    android:layout_marginRight="8dp"/>
            <TextView
                    android:layout_gravity="center"
                    android:text="@string/start_buton_rate_us"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="#FFF"
                    android:textStyle="bold"/>
        </LinearLayout>

    </FrameLayout>
    <FrameLayout
            android:id="@+id/fragmentAdout_sendFeedback"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bt"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:minHeight="35dp">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
            <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/arrow_zsolt"
                    android:layout_width="16sp"
                    android:layout_height="16sp"
                    android:layout_marginRight="8dp"/>
            <TextView
                    android:layout_gravity="center"
                    android:text="@string/start_buton_send_feedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="#FFF"
                    android:textStyle="bold"/>
        </LinearLayout>

    </FrameLayout>

    <TextView
            android:text="@string/tutorial_txt6_end"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:textColor="#333"
            android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/tutorial_txt7_end"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:textColor="#ef4035"
            android:layout_marginBottom="8dp"/>
    <ImageView
            android:layout_gravity="center_horizontal"
            android:src="@drawable/log_itech"
            android:layout_width="49dp"
            android:layout_height="90dp"/>
</LinearLayout>